added page already exists condition in createPage

--- a/entries/.obsidian/workspace
+++ b/entries/.obsidian/workspace
@@ -89,6 +89,9 @@
   "active": "9dc0b6c8ba001967",
   "lastOpenFiles": [
     "C Sharp.md",
+    "CSS.md",
+    "Django.md",
+    "Git.md",
     "Untitled.md"
   ]
 }
