--- a/entries/.obsidian/workspace
+++ b/entries/.obsidian/workspace
@@ -7,11 +7,8 @@
         "id": "dba2d7b39b6ae9f3",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Django.md",
-            "mode": "source"
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -68,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Django.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,13 +84,13 @@
   },
   "active": "dba2d7b39b6ae9f3",
   "lastOpenFiles": [
+    "C Sharp.md",
     "Django.md",
     "Git.md",
     "Unity.md",
     "Python.md",
     "Html.md",
     "C.md",
-    "C Sharp.md",
     "CSS.md",
     "Untitled.md"
   ]
