--- a/entries/.obsidian/workspace
+++ b/entries/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "dba2d7b39b6ae9f3",
+        "id": "7e1f51fcb1e5b8ab",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "SSH.md",
+            "file": "SQLite in Django.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "SSH.md",
+                "file": "SQLite in Django.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -78,24 +78,34 @@
                 "unlinkedCollapsed": true
               }
             }
+          },
+          {
+            "id": "6049870abfb5193c",
+            "type": "leaf",
+            "state": {
+              "type": "advanced-tables-toolbar",
+              "state": {}
+            }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
     "width": 300,
     "collapsed": true
   },
-  "active": "dba2d7b39b6ae9f3",
+  "active": "7e1f51fcb1e5b8ab",
   "lastOpenFiles": [
-    "Untitled.md",
-    "C Sharp.md",
+    "SQLite in Django.md",
     "Django.md",
-    "Git.md",
-    "Unity.md",
     "Python.md",
-    "Html.md",
-    "C.md",
-    "CSS.md"
+    "SQL in Django.md",
+    "SQL.md",
+    "Untitled.md",
+    "VSCode.md",
+    "Git.md",
+    "Javascript Libraries/Babel.md",
+    "Javascript Libraries/Untitled.md"
   ]
 }
