--- a/entries/.obsidian/workspace
+++ b/entries/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "7e1f51fcb1e5b8ab",
+        "id": "d26b15b3f52977f2",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Ssh.md",
+            "file": "Django.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Ssh.md",
+                "file": "Django.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -95,17 +95,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "7e1f51fcb1e5b8ab",
+  "active": "d26b15b3f52977f2",
   "lastOpenFiles": [
-    "Ssh.md",
+    "Django.md",
     "Git.md",
     "SQLite in Django.md",
-    "Django.md",
-    "Python.md",
-    "SQL in Django.md",
-    "SQL.md",
-    "Untitled.md",
     "VSCode.md",
-    "Javascript Libraries/Babel.md"
+    "Javascript.md",
+    "HTTP.md",
+    "Obsidian.md",
+    "Untitled.md",
+    "Javascript Libraries/Creating our own JSX transpiler.md",
+    "Ssh.md"
   ]
 }
