--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-markdown2 = "*"
-numpy = "*"
-submit50 = "*"
-django-heroku = "*"
+gunicorn = "*"
 
 [dev-packages]
 
