--- a/entries/.obsidian/workspace
+++ b/entries/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Heroku/Heroku > Python.md",
+            "file": "SQL.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Heroku/Heroku > Python.md",
+                "file": "SQL.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -97,6 +97,7 @@
   },
   "active": "d26b15b3f52977f2",
   "lastOpenFiles": [
+    "SQL.md",
     "Heroku/Untitled.md",
     "Untitled.md",
     "Django.md",
@@ -105,7 +106,6 @@
     "VSCode.md",
     "Javascript.md",
     "HTTP.md",
-    "Obsidian.md",
-    "Javascript Libraries/Creating our own JSX transpiler.md"
+    "Obsidian.md"
   ]
 }
