--- a/entries/.obsidian/workspace
+++ b/entries/.obsidian/workspace
@@ -53,7 +53,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "right": {
     "id": "548dd7b686fc8e13",
