--- a/entries/.obsidian/workspace
+++ b/entries/.obsidian/workspace
@@ -7,11 +7,8 @@
         "id": "1bbc38e2bf34313e",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Django.md",
-            "mode": "source"
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -39,7 +36,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "ssh",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -52,7 +49,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "right": {
     "id": "548dd7b686fc8e13",
@@ -68,7 +66,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Django.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -97,15 +94,15 @@
   },
   "active": "1bbc38e2bf34313e",
   "lastOpenFiles": [
+    "Deploys/Python + MySQL.md",
+    "SQLite in Django.md",
+    "Ssh.md",
     "Django.md",
     "CSS.md",
+    "Git.md",
+    "Python.md",
     "Heroku/Heroku > Python.md",
-    "SQLite in Django.md",
-    "SQL.md",
-    "Ssh.md",
-    "NFTs.md",
-    "Mythical JS-First HTML.md",
-    "C-sharp.md",
-    "Css.md"
+    "Deploys/Untitled.md",
+    "SQL.md"
   ]
 }
